--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <title>Frontend Mentor | Loopstudios landing page</title>
     <style>
@@ -66,6 +72,9 @@
     </main>
 
     <footer>
+      <div>
+        <img src="./images/logo.svg" alt="logo" />
+      </div>
       <ul class="links">
         <li><a href="#">About</a></li>
         <li><a href="#">Careers</a></li>
@@ -74,6 +83,13 @@
         <li><a href="#">Support</a></li>
       </ul>
       <div class="copyright">© 2021 Loopstudios. All rights reserved.</div>
+
+      <div>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-pinterest"></i>
+      </div>
     </footer>
 
     <div class="attribution">
