style: create color variables

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./dist/main.css" />
     <title>Frontend Mentor | Loopstudios landing page</title>
     <style>
       .attribution {
