style: insert the Alata and Josefin Sans font family

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./dist/main.css" />
     <title>Frontend Mentor | Loopstudios landing page</title>
     <style>
