style: transform hero h1 text and a border around it

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <h1>Our creations</h1>
         <div>See All</div>
         <div class="list">
-          <div>Deep earth</div>
-          <div>Night arcade</div>
-          <div>Soccer team VR</div>
-          <div>The grid</div>
-          <div>From up above VR</div>
-          <div>Pocket borealis</div>
-          <div>The curiosity</div>
-          <div>Make it fisheye</div>
+          <div><h2>Deep earth</h2></div>
+          <div><h2>Night arcade</h2></div>
+          <div><h2>Soccer team VR</h2></div>
+          <div><h2>The grid</h2></div>
+          <div><h2>From up above VR</h2></div>
+          <div><h2>Pocket borealis</h2></div>
+          <div><h2>The curiosity</h2></div>
+          <div><h2>Make it fisheye</h2></div>
         </div>
       </section>
     </main>
