--- a/index.html
+++ b/index.html
@@ -53,14 +53,22 @@
         <h1>Immersive experiences that deliver</h1>
       </section>
       <section class="leader-interactive">
-        <h1>The leader in interactive VR</h1>
-        <p>
-          Founded in 2011, Loopstudios has been producing world-class virtual
-          reality projects for some of the best companies around the globe. Our
-          award-winning creations have transformed businesses through digital
-          experiences that bind to their brand.
-        </p>
-        <div><img src="./images/desktop/image-interactive.jpg" alt="" /></div>
+        <div>
+          <img
+            src="./images/desktop/image-interactive.jpg"
+            alt="Man with virtual reality headset"
+          />
+        </div>
+
+        <div>
+          <h1>The leader in interactive VR</h1>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual
+            reality projects for some of the best companies around the globe.
+            Our award-winning creations have transformed businesses through
+            digital experiences that bind to their brand.
+          </p>
+        </div>
       </section>
       <section class="our-creation">
         <h1>Our creations</h1>
