style: add flex and grid rules for the Our-section-main

--- a/index.html
+++ b/index.html
@@ -72,16 +72,18 @@
       </section>
       <section class="our-creation">
         <h1>Our creations</h1>
-        <div>See All</div>
-        <div class="list">
-          <div><h2>Deep earth</h2></div>
-          <div><h2>Night arcade</h2></div>
-          <div><h2>Soccer team VR</h2></div>
-          <div><h2>The grid</h2></div>
-          <div><h2>From up above VR</h2></div>
-          <div><h2>Pocket borealis</h2></div>
-          <div><h2>The curiosity</h2></div>
-          <div><h2>Make it fisheye</h2></div>
+        <div class="see-all">
+          <span>See All</span>
+        </div>
+        <div class="list mt-40">
+          <div class="list__item1"><h2>Deep earth</h2></div>
+          <div class="list__item2"><h2>Night arcade</h2></div>
+          <div class="list__item3"><h2>Soccer team VR</h2></div>
+          <div class="list__item4"><h2>The grid</h2></div>
+          <div class="list__item5 mt-20"><h2>From up above VR</h2></div>
+          <div class="list__item6 mt-20"><h2>Pocket borealis</h2></div>
+          <div class="list__item7 mt-20"><h2>The curiosity</h2></div>
+          <div class="list__item8 mt-20"><h2>Make it fisheye</h2></div>
         </div>
       </section>
     </main>
