style: manage footer style

--- a/index.html
+++ b/index.html
@@ -90,22 +90,28 @@
 
     <footer>
       <div>
-        <img src="./images/logo.svg" alt="logo" />
+        <div>
+          <img src="./images/logo.svg" alt="logo" />
+        </div>
+        <ul class="links mt-10">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Events</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
       </div>
-      <ul class="links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
-      <div class="copyright">© 2021 Loopstudios. All rights reserved.</div>
 
       <div>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-pinterest"></i>
+        <div class="social-media">
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-pinterest"></i>
+        </div>
+        <div class="copyright mt-10">
+          © 2021 Loopstudios. All rights reserved.
+        </div>
       </div>
     </footer>
 
