fix: display list of all creations

--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
     />
     <link rel="stylesheet" href="./dist/main.css" />
     <title>Frontend Mentor | Loopstudios landing page</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <header>
@@ -71,19 +62,35 @@
         </div>
       </section>
       <section class="our-creation">
-        <h1>Our creations</h1>
-        <div class="see-all">
+        <h1 class="our-creation__title">Our creations</h1>
+        <div class="our-creation__see-all">
           <span>See All</span>
         </div>
-        <div class="list mt-40">
-          <div class="list__item1"><h2>Deep earth</h2></div>
-          <div class="list__item2"><h2>Night arcade</h2></div>
-          <div class="list__item3"><h2>Soccer team VR</h2></div>
-          <div class="list__item4"><h2>The grid</h2></div>
-          <div class="list__item5 mt-20"><h2>From up above VR</h2></div>
-          <div class="list__item6 mt-20"><h2>Pocket borealis</h2></div>
-          <div class="list__item7 mt-20"><h2>The curiosity</h2></div>
-          <div class="list__item8 mt-20"><h2>Make it fisheye</h2></div>
+        <div class="our-creation__card-list">
+          <div class="our-creation__card-list__item1">
+            <h2>Deep earth</h2>
+          </div>
+          <div class="our-creation__card-list__item2">
+            <h2>Night arcade</h2>
+          </div>
+          <div class="our-creation__card-list__item3">
+            <h2>Soccer team VR</h2>
+          </div>
+          <div class="our-creation__card-list__item4">
+            <h2>The grid</h2>
+          </div>
+          <div class="our-creation__card-list__item5">
+            <h2>From up above VR</h2>
+          </div>
+          <div class="our-creation__card-list__item6">
+            <h2>Pocket borealis</h2>
+          </div>
+          <div class="our-creation__card-list__item7">
+            <h2>The curiosity</h2>
+          </div>
+          <div class="our-creation__card-list__item8">
+            <h2>Make it fisheye</h2>
+          </div>
         </div>
       </section>
     </main>
@@ -114,12 +121,5 @@
         </div>
       </div>
     </footer>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Joseph Kabemba</a>.
-    </div>
   </body>
 </html>
