--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <div><img src="./images/logo.svg" alt="logo" /></div>
+      <div class="logo"><img src="./images/logo.svg" alt="logo" /></div>
       <nav>
         <ul>
           <li><a href="#">About</a></li>
@@ -97,7 +97,7 @@
 
     <footer>
       <div>
-        <div>
+        <div class="logo">
           <img src="./images/logo.svg" alt="logo" />
         </div>
         <ul class="links mt-10">
